(qs, WIP) Tidy it up a bit